kube/ckad/chapter-8/alpine-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: alpine
  name: alpine
spec:
  volumes: 
  - name: shared-vol
    emptyDir: {}
  containers:
  - image: alpine:3.12.0
    name: alpine1
    command: ["sh","-c", "while true; echo 'alpine1 is going to sleep'; do sleep 4; done" ]
    resources: {}
    volumeMounts: 
    - name: shared-vol
      mountPath: /etc/a
  - image: alpine:3.12.0
    name: alpine2
    command: ["sh","-c", "while true; echo 'alpine2 is going to sleep'; do sleep 4; done" ]
    resources: {}
    volumeMounts:
    - name: shared-vol
      mountPath: /etc/b
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
