kube/ckad/chapter-8/backend.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Pod
  metadata:
    labels:
      app: nginx
      tier: backend
    name: backend
    namespace: default
  spec:
    containers:
    - image: nginx
      imagePullPolicy: Always
      name: backend
      ports:
      - containerPort: 80
        protocol: TCP
      resources: {}
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-cdg8v
        readOnly: true
    dnsPolicy: ClusterFirst
    enableServiceLinks: true
    nodeName: anto-vm
    preemptionPolicy: PreemptLowerPriority
    priority: 0
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext: {}
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
    volumes:
    - name: kube-api-access-cdg8v
      projected:
        defaultMode: 420
        sources:
        - serviceAccountToken:
            expirationSeconds: 3607
            path: token
        - configMap:
            items:
            - key: ca.crt
              path: ca.crt
            name: kube-root-ca.crt
        - downwardAPI:
            items:
            - fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
              path: namespace
  status:
    conditions:
    - lastProbeTime: null
      lastTransitionTime: "2022-12-12T15:46:56Z"
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2022-12-12T15:47:00Z"
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2022-12-12T15:47:00Z"
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2022-12-12T15:46:56Z"
      status: "True"
      type: PodScheduled
    containerStatuses:
    - containerID: containerd://8ab37ec6ae28c1314569b7960eea11efb58e0c8f99313aa91fa77b1458d103d3
      image: docker.io/library/nginx:latest
      imageID: docker.io/library/nginx@sha256:ab589a3c466e347b1c0573be23356676df90cd7ce2dbf6ec332a5f0a8b5e59db
      lastState: {}
      name: backend
      ready: true
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2022-12-12T15:47:00Z"
    hostIP: 10.0.2.15
    phase: Running
    podIP: 10.0.0.196
    podIPs:
    - ip: 10.0.0.196
    qosClass: BestEffort
    startTime: "2022-12-12T15:46:56Z"
- apiVersion: v1
  kind: Pod
  metadata:
    creationTimestamp: "2022-12-12T15:46:38Z"
    labels:
      app: nginx
    name: frontend
    namespace: default
    resourceVersion: "688778"
    uid: cba5a706-9296-4e8d-9f92-a40eb3d87de1
  spec:
    containers:
    - image: nginx
      imagePullPolicy: Always
      name: frontend
      ports:
      - containerPort: 80
        protocol: TCP
      resources: {}
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-wkcrp
        readOnly: true
    dnsPolicy: ClusterFirst
    enableServiceLinks: true
    nodeName: anto-vm
    preemptionPolicy: PreemptLowerPriority
    priority: 0
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext: {}
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
    volumes:
    - name: kube-api-access-wkcrp
      projected:
        defaultMode: 420
        sources:
        - serviceAccountToken:
            expirationSeconds: 3607
            path: token
        - configMap:
            items:
            - key: ca.crt
              path: ca.crt
            name: kube-root-ca.crt
        - downwardAPI:
            items:
            - fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
              path: namespace
  status:
    conditions:
    - lastProbeTime: null
      lastTransitionTime: "2022-12-12T15:46:38Z"
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2022-12-12T15:46:42Z"
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2022-12-12T15:46:42Z"
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2022-12-12T15:46:38Z"
      status: "True"
      type: PodScheduled
    containerStatuses:
    - containerID: containerd://a879b86c46764048907ba1e2c33e9c8c8274be03e55bc80d3dcddcee41f02482
      image: docker.io/library/nginx:latest
      imageID: docker.io/library/nginx@sha256:ab589a3c466e347b1c0573be23356676df90cd7ce2dbf6ec332a5f0a8b5e59db
      lastState: {}
      name: frontend
      ready: true
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2022-12-12T15:46:42Z"
    hostIP: 10.0.2.15
    phase: Running
    podIP: 10.0.0.130
    podIPs:
    - ip: 10.0.0.130
    qosClass: BestEffort
    startTime: "2022-12-12T15:46:38Z"
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Pod","metadata":{"annotations":{},"creationTimestamp":null,"labels":{"run":"nginx"},"name":"nginx","namespace":"default"},"spec":{"containers":[{"image":"nginx","name":"nginx","resources":{},"volumeMounts":[{"mountPath":"/var/log/nginx","name":"pvc-vol"}]}],"dnsPolicy":"ClusterFirst","restartPolicy":"Never","volumes":[{"name":"pvc-vol","persistentVolumeClaim":{"claimName":"pvc-logs"}}]},"status":{}}
    creationTimestamp: "2022-12-12T15:37:17Z"
    labels:
      run: nginx
    name: nginx
    namespace: default
    resourceVersion: "687853"
    uid: a7c3ac3e-be2f-40c8-8ab1-571c5cd82f48
  spec:
    containers:
    - image: nginx
      imagePullPolicy: Always
      name: nginx
      resources: {}
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /var/log/nginx
        name: pvc-vol
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-d5v9b
        readOnly: true
    dnsPolicy: ClusterFirst
    enableServiceLinks: true
    nodeName: anto-vm
    preemptionPolicy: PreemptLowerPriority
    priority: 0
    restartPolicy: Never
    schedulerName: default-scheduler
    securityContext: {}
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
    volumes:
    - name: pvc-vol
      persistentVolumeClaim:
        claimName: pvc-logs
    - name: kube-api-access-d5v9b
      projected:
        defaultMode: 420
        sources:
        - serviceAccountToken:
            expirationSeconds: 3607
            path: token
        - configMap:
            items:
            - key: ca.crt
              path: ca.crt
            name: kube-root-ca.crt
        - downwardAPI:
            items:
            - fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
              path: namespace
  status:
    conditions:
    - lastProbeTime: null
      lastTransitionTime: "2022-12-12T15:39:41Z"
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2022-12-12T15:39:46Z"
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2022-12-12T15:39:46Z"
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2022-12-12T15:39:41Z"
      status: "True"
      type: PodScheduled
    containerStatuses:
    - containerID: containerd://c27698523c4c5c6305ab57c7261560320d505690a4450771c864b0162607ecf6
      image: docker.io/library/nginx:latest
      imageID: docker.io/library/nginx@sha256:ab589a3c466e347b1c0573be23356676df90cd7ce2dbf6ec332a5f0a8b5e59db
      lastState: {}
      name: nginx
      ready: true
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2022-12-12T15:39:45Z"
    hostIP: 10.0.2.15
    phase: Running
    podIP: 10.0.0.93
    podIPs:
    - ip: 10.0.0.93
    qosClass: BestEffort
    startTime: "2022-12-12T15:39:41Z"
kind: List
metadata:
  resourceVersion: ""
