kube/ckad/chapter-8/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  volumes:
  - name: pvc-vol
    persistentVolumeClaim:
      claimName: pvc-logs
  containers:
  - image: nginx
    name: nginx
    resources: {}
    volumeMounts:
    - name: pvc-vol
      mountPath: /var/log/nginx
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
