kube/ckad/chapter-8/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx-service
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 80
  selector:
    tier: backend
    app: nginx
status:
  loadBalancer: {}
