kube/ckad/chapter-8/app-stack-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-stack-netpol
  namespace: app-stack
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: app-stack
        - podSelector:
            matchLabels:
              tier: backend
      ports:
        - protocol: TCP
          port: 3306
